adding maxhop functionality
